[gd_scene load_steps=3 format=3 uid="uid://cardlist456"]

[ext_resource type="Script" path="res://scripts/screens/CardList.gd" id="1_cardlist"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.1, 1.0)

[node name="CardList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_cardlist")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1.0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Card Collection"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0, 1, 1, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Refresh"
theme_override_colors/font_color = Color(0, 1, 1, 1)

[node name="BackButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Back"
theme_override_colors/font_color = Color(0, 1, 1, 1)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Loading cards..."
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[connection signal="pressed" from="VBoxContainer/HeaderContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/BackButton" to="." method="_on_back_button_pressed"]